añadiendo pagina de bienvenida

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ header h1 {
 /*
     AÑADIDOS PARA EL QR
 */
-/* Bienvenida */
+/* bienvenida.html */
 #welcome-container {
     text-align: center;
     padding: 40px 20px;
