--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ header h1 {
     top: 0;
     width: 250px;
     height: 100%;
-    background: #333;
+    background: whitesmoke;
     color: white;
     padding-top: 60px;
     transition: left 0.3s ease;
@@ -67,14 +67,14 @@ header h1 {
 }
 
 .sidebar a {
-    color: white;
+    color: rgb(16, 99, 223);
     text-decoration: none;
     display: block;
     transition: background 0.3s;
 }
 
 .sidebar a:hover {
-    background: #575757;
+    background: #beb9b981;
 }
 
 /* Contenido principal */
