--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,15 @@ header h1 {
     margin: 0 auto; /* Centra el gif horizontalmente */
 }
 
+/*Imagen del sidebar*/
+.sideimg{
+  display: block; /* Asegura que el elemento respete los márgenes */
+  max-width: 40%; /* Evita que el gif se salga del contenedor */
+  height: auto; /* Mantiene la proporción */
+  margin: 0 auto; /* Centra el gif horizontalmente*/
+
+}
+
 /* Estilos para el formulario */
 .form-group {
     margin-bottom: 20px;
